--- a/index.html
+++ b/index.html
@@ -3,14 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <title>Apple</title>
-    <link rel="stylesheet" type="text/css" href="/Assests/Styles/reset.css">
-    <link rel="stylesheet" type="text/css" href="/Assests/Styles/styles.css">
+    <link rel="stylesheet" type="text/css" href="Assests/Styles/reset.css">
+    <link rel="stylesheet" type="text/css" href="Assests/Styles/styles.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
 <body>
-    <div class="nav-bar">
-        
-    </div>
+    <div></div>
+    <div class=main-content>
+        <div class="nav-bar">
+            <ul>
+                <li><i class="fab fa-apple fa-lg"></i></li>
+                <li>Store</li>
+                <li>Mac</li>
+                <li>iPod</li>
+                <li>iPhone</li>
+                <li>iPad</li>
+                <li>iTunes</li>
+                <li>Support</li>
+                <li><input id="search" type="text"></li>
+            </ul>
+        </div><!--end of nav-bar-->
+        <div class="main-text">
+            <ul>
+                <li><h1>What will your verse be?</h1></li>
+                <li><h2>Everyone has something to share. See how people are using<br> iPad in their unique ways to add to the world's story.</h2></li>
+                <li><a href="https://github.com/RadiactiveJesus/apple-homepage-project"><h3>Watch the "Your verse" film and explore the stories<i class="far fa-play-circle"></i></h3></a></li>
+            </ul>
+        </div>
+        <div class="footer-images">
+            <imf src="/Media/iPhone5"
+        </div>
+    </div><!--end of main-content-->
     
 </body>
 </html>
