adding footer and styling

--- a/index.html
+++ b/index.html
@@ -29,9 +29,24 @@
                 <li><h2>Everyone has something to share. See how people are using<br> iPad in their unique ways to add to the world's story.</h2></li>
                 <li><a href="https://github.com/RadiactiveJesus/apple-homepage-project"><h3>Watch the "Your verse" film and explore the stories<i class="far fa-play-circle"></i></h3></a></li>
             </ul>
-        </div>
+        </div><!--end of main-text-->
         <div class="footer-images">
-            <imf src="/Media/iPhone5"
+            <img src="Assests/Media/iphone5.jpg" alt="iPhone 5">
+            <img src="Assests/Media/blue-iphone5.jpg" alt="iPhone 5">
+            <img src="Assests/Media/30-years.jpg" alt="iPhone 5">
+            <img src="Assests/Media/supplier.jpg" alt="iPhone 5">
+        </div><!--end of footer-images-->
+        <div class="footer">
+            <p>Shop the <a href="#">Apple Online Store</a> (1-800-MY-APPLE), visit an <a href="#">Apple Retail Store</a>, or find a <a href="#">reseller</a>.</p>
+                <ul>
+                    <li><a href="#">Site Map</a></li>
+                    <li><a href="#">Hot News</a></li>
+                    <li><a href="#">RSS Feeds</a></li>
+                    <li><a href="#">Media Info</a></li>
+                    <li><a href="#">Environment</a></li>
+                    <li><a href="#">Job Opportunities</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
         </div>
     </div><!--end of main-content-->
     
