--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <img src="Assests/Media/supplier.jpg" alt="iPhone 5">
         </div><!--end of footer-images-->
         <div class="footer">
-            <p>Shop the <a href="#">Apple Online Store</a> (1-800-MY-APPLE), visit an <a href="#">Apple Retail Store</a>, or find a <a href="#">reseller</a>.</p>
+            <p>Shop the<a href="#">Apple Online Store</a>(1-800-MY-APPLE), visit an<a href="#">Apple Retail Store</a>, or find a<a href="#">reseller</a>.</p>
                 <ul>
                     <li><a href="#">Site Map</a></li>
                     <li><a href="#">Hot News</a></li>
@@ -47,7 +47,8 @@
                     <li><a href="#">Job Opportunities</a></li>
                     <li><a href="#">Contact Us</a></li>
                 </ul>
-        </div>
+        </div><!--end of footer-->
+        <p id="last-footer">Copyright © 2014 Apple Inc. All rights reserved. <a href="#">Terms of Use</a> <a id="privacy-policy" href="#">Privacy Policy</a></p>
     </div><!--end of main-content-->
     
 </body>
