--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                     <li><a href="#">Environment</a></li>
                     <li><a href="#">Job Opportunities</a></li>
                     <li><a href="#">Contact Us</a></li>
+                    <li><img src="Assests/Media/flag.png"></li>
                 </ul>
         </div><!--end of footer-->
         <p id="last-footer">Copyright © 2014 Apple Inc. All rights reserved. <a href="#">Terms of Use</a> <a id="privacy-policy" href="#">Privacy Policy</a></p>
