--- a/index.html
+++ b/index.html
@@ -12,21 +12,22 @@
     <div class=main-content>
         <div class="nav-bar">
             <ul>
-                <li><i class="fab fa-apple fa-lg"></i></li>
-                <li>Store</li>
-                <li>Mac</li>
-                <li>iPod</li>
-                <li>iPhone</li>
-                <li>iPad</li>
-                <li>iTunes</li>
-                <li>Support</li>
+                <li id="apple"><a href="https://github.com/RadiactiveJesus/apple-homepage-project"><i class="fab fa-apple fa-lg"></i></a></li>
+                <li><a href="https://github.com/RadiactiveJesus/apple-homepage-project">Store</a></li>
+                <li><a href="https://github.com/RadiactiveJesus/apple-homepage-project">Mac</a></li>
+                <li><a href="https://github.com/RadiactiveJesus/apple-homepage-project">iPod</a></li>
+                <li><a href="https://github.com/RadiactiveJesus/apple-homepage-project">iPhone</a></li>
+                <li><a href="https://github.com/RadiactiveJesus/apple-homepage-project">iPad</a></li>
+                <li><a href="https://github.com/RadiactiveJesus/apple-homepage-project">iTunes</a></li>
+                <li><a href="https://github.com/RadiactiveJesus/apple-homepage-project">Support</a></li>
                 <li><input id="search" type="text"></li>
             </ul>
+            <i id="glass" class="fas fa-search"></i>
         </div><!--end of nav-bar-->
         <div class="main-text">
             <ul>
-                <li><h1>What will your verse be?</h1></li>
-                <li><h2>Everyone has something to share. See how people are using<br> iPad in their unique ways to add to the world's story.</h2></li>
+                <li><a href="https://github.com/RadiactiveJesus/apple-homepage-project"><h1>What will your verse be?</h1></a></li>
+                <li><a href="https://github.com/RadiactiveJesus/apple-homepage-project"><h2>Everyone has something to share. See how people are using<br> iPad in their unique ways to add to the world's story.</h2></a></li>
                 <li><a href="https://github.com/RadiactiveJesus/apple-homepage-project"><h3>Watch the "Your verse" film and explore the stories<i class="far fa-play-circle"></i></h3></a></li>
             </ul>
         </div><!--end of main-text-->
